[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemies sprites/fly/fly_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fly.gd" type="Script" id=3]

[sub_resource type="Animation" id=4]
resource_name = "Die"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 16 ]
}

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]

[node name="Fly" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 8
hframes = 5
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 4 )
anims/Idle = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 2 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
scale = Vector2( 0.4, 0.4 )
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
